--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -1,4 +1,16 @@
 $badge-border-width: var(--component-border-width-base) !default;
 
-$badge-sizes: ("sm") !default;
-$badge-shapes: ("base", "rounded") !default;
+$badge-sizes: (
+  "xs": (
+    "font-size": "xxs", "gap": "4", "height": "16", "min-width": "16", "padding-x": "4"
+  ),
+  "sm": (
+    "font-size": "xs",  "gap": "8", "height": "24", "min-width": "24", "padding-x": "8"
+  ),
+  "base": (
+    "font-size": "sm",  "gap": "8", "height": "32", "min-width": "32", "padding-x": "12"
+  )
+) !default;
+
+$badge-types: ("solid", "subtle") !default;
+
