--- a/src/scss/components/form-control/_variables.scss
+++ b/src/scss/components/form-control/_variables.scss
@@ -1,6 +1,6 @@
 $form-control-bg-color: var(--color-bg-lt);
 $form-control-border-color: var(--color-border);
-$form-control-border-radius: var(--border-radius-base);
+$form-control-border-radius: var(--component-border-radius-base);
 $form-control-border-width: var(--component-border-width-base);
 $form-control-color: var(--color-heading);
 
