--- a/src/scss/components/space/_variables.scss
+++ b/src/scss/components/space/_variables.scss
@@ -1,1 +1,14 @@
-$space-gap: 12px;
+$space-sizes: (
+  "4": (
+    "gap": "4"
+  ),
+  "8": (
+    "gap": "8"
+  ),
+  "12": (
+    "gap": "12"
+  ),
+  "16": (
+    "gap": "16"
+  )
+) !default;
