--- a/src/scss/components/avatar/_base.scss
+++ b/src/scss/components/avatar/_base.scss
@@ -1,18 +1,54 @@
 .avatar {
   border-radius: $avatar-border-radius;
   box-sizing: border-box;
-  display: inline-block;
-  font-size: $avatar-font-size;
-  font-weight: $avatar-font-weight;
-  height: $avatar-height;
-  line-height: $avatar-height;
+  display: inline-flex;
+  position: relative;
+
+  // Children Components
+
+  .badge {
+    box-shadow: 0 0 0 2px #fff;
+  }
+
+  .dot {
+    box-shadow: 0 0 0 2px #fff;
+  }
+}
+
+.avatar-img {
+  background-color: $avatar-bg;
+  height: 100%;
   overflow: hidden;
   position: relative;
-  text-align: center;
-  vertical-align: middle;
-  width: $avatar-width;
+  width: 100%;
 
   img {
     @include img-fit;
+
+    &:not([src]) {
+      visibility: hidden;
+    }
+  }
+}
+
+// Shape
+
+@each $shape in $avatar-shapes {
+  $props: map-get($component-shapes, $shape);
+
+  .avatar-shape-#{$shape} {
+    .avatar-img {
+      @include map-props-mixin($props);
+    }
+  }
+}
+
+// Size
+
+@each $name, $props in $avatar-sizes {
+  $size: map-get($props, "size");
+
+  .avatar-size-#{$name} {
+    @include map-props-mixin(map-get($component-size-sizing, $size));
   }
 }
