--- a/src/scss/mixins/_common.scss
+++ b/src/scss/mixins/_common.scss
@@ -6,12 +6,9 @@
 @mixin img-fit {
   @include pos-center;
 
-  max-height: 100%;
-  max-width: 100%;
-  min-height: 100%;
-  min-width: 100%;
-
-  object-fit: scale-down;
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
 }
 
 @mixin pos-center {
