--- a/src/scss/variables/_brightness.scss
+++ b/src/scss/variables/_brightness.scss
@@ -1,8 +1,7 @@
-$brightness-base: 12% !default;
+$brightness-4: 4% !default;
+$brightness-8: 8% !default;
+$brightness-16: 16% !default;
+$brightness-24: 24% !default;
+$brightness-32: 32% !default;
 
-$brightness-xs: 4% !default;
-$brightness-sm: 8% !default;
-$brightness-md: 16% !default;
-$brightness-lg: 20% !default;
-$brightness-xl: 24% !default;
-$brightness-xxl: 32% !default;
+$component-brightness-base: $brightness-8 !default;
