--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -10,8 +10,7 @@ $font-family-generic: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 $font-scale: 1.333 !default; // Perfect Fourth
 $font-size-base: 1rem !default;
 
-$font-size-h1: 1em *
-  ($font-scale * $font-scale * $font-scale * $font-scale * $font-scale) !default;
+$font-size-h1: 1em * ($font-scale * $font-scale * $font-scale * $font-scale * $font-scale) !default;
 $font-size-h2: 1em * ($font-scale * $font-scale * $font-scale * $font-scale) !default;
 $font-size-h3: 1em * ($font-scale * $font-scale * $font-scale) !default;
 $font-size-h4: 1em * ($font-scale * $font-scale) !default;
